--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -1,69 +1,90 @@
 ---
-import { getSortedPostsByType } from '@lib/util';
-import Layout from '@layouts/Layout.astro';
-import { Image } from 'astro:assets';
+import { getSortedPostsByType } from "@lib/util";
+import Layout from "@layouts/Layout.astro";
+import { Image } from "astro:assets";
 
 export async function getStaticPaths() {
-    return (await getSortedPostsByType('post', 'all')).map((entry: any) => {
-        return {
-            params: { slug: entry.slug },
-            props: { entry }
-        };
-    });
+  return (await getSortedPostsByType("post", "all")).map((post: any) => {
+    return {
+      params: { slug: post.slug },
+      props: { post },
+    };
+  });
 }
 
-const { entry } = Astro.props;
-const { Content } = await entry.render();
+const { post } = Astro.props;
+const { Content } = await post.render();
 ---
 
 <Layout>
-    <Fragment slot="head">
-        <title>{entry.data.title} - Jeroen van Wissen</title>
-        <meta content="website" property="og:type" />
-        <meta content={`${entry.data.title} - Jeroen van Wissen`} property="og:title" />
-        <meta content={entry.data.description} name="description" />
-        <meta content={entry.data.description} property="og:description" />
-        <meta content={`${import.meta.env.SITE}/post/${entry.slug}`} property="og:url" />
-        <meta content={`${import.meta.env.SITE}/images/og-image.webp`} property="og:image" />
-        <meta content={`${import.meta.env.SITE}/images/og-image.webp`} property="twitter:image:src" />
-        <link href={`${import.meta.env.SITE}/post/${entry.slug}`} rel="canonical" />
-    </Fragment>
-    <div class="w-full bg-primary-950">
-        <div class="max-w-6xl mx-auto px-6">
-            <article>
-                <div class="p-4 md:p-6">
-                    <div class="items-center justify-between md:flex">
-                        <!-- <div class="flex text-xs text-primary-50">{entry.data.date.toLocaleString('en-US', { day: 'numeric', month: 'long', year: 'numeric', timeZone: 'Europe/Amsterdam' })}</div> -->
+  <Fragment slot="head">
+    <title>{post.data.title} - Jeroen van Wissen</title>
+    <meta content="website" property="og:type" />
+    <meta
+      content={`${post.data.title} - Jeroen van Wissen`}
+      property="og:title"
+    />
+    <meta content={post.data.description} name="description" />
+    <meta content={post.data.description} property="og:description" />
+    <meta
+      content={`${import.meta.env.SITE}/post/${post.slug}`}
+      property="og:url"
+    />
+    <meta
+      content={`${import.meta.env.SITE}/images/og-image.webp`}
+      property="og:image"
+    />
+    <meta
+      content={`${import.meta.env.SITE}/images/og-image.webp`}
+      property="twitter:image:src"
+    />
+    <link href={`${import.meta.env.SITE}/post/${post.slug}`} rel="canonical" />
+  </Fragment>
+  <div class="w-full bg-primary-950">
+    <div class="max-w-6xl mx-auto p-2">
+      <article>
+        <div class="items-center justify-between md:flex">
+          <!-- <div class="flex text-xs text-primary-50">{entry.data.date.toLocaleString('en-US', { day: 'numeric', month: 'long', year: 'numeric', timeZone: 'Europe/Amsterdam' })}</div> -->
 
-                        { entry.data.image && (
-                            <Image
-                                src={entry.data.image.url}
-                                alt={entry.data.image.alt}
-                                width={1320}
-                                class=""
-                                />
-                        )}
-                    </div>
-                    <h2>{entry.data.title}</h2>
-                    <p>{entry.data.description}</p>
-                    <Content />
-                </div>
-            </article>
+          {
+            post.data.image && (
+              <div class="cutoff-tl-br">
+                <Image
+                  src={post.data.image.url}
+                  alt={post.data.image.alt}
+                  quality={50}
+                  format="webp"
+                  loading="lazy"
+                  width={1420}
+                  class={
+                    post.data.type !== "photo"
+                      ? "h-32 sm:h-48 md:h-64 lg:h-96 object-cover object-middle"
+                      : ""
+                  }
+                />
+              </div>
+            )
+          }
         </div>
+        <h2>{post.data.title}</h2>
+        <p>{post.data.description}</p>
+        <Content />
+      </article>
     </div>
+  </div>
 </Layout>
 
 <style is:global>
-    article h2 {
-        @apply mt-4 text-base font-bold text-primary-50 md:mt-6 md:text-xl;
-    }
-    article p {
-        @apply mt-3 mb-4 text-primary-50;
-    }
-    article a {
-        @apply text-primary-500 underline hover:text-primary-300;
-    }
-    article .astro-code {
-        @apply rounded-lg border border-secondary-700 p-2 text-xs shadow md:p-4 md:text-base;
-    }
+  article h2 {
+    @apply mt-4 text-base font-bold text-primary-50 md:mt-6 md:text-xl;
+  }
+  article p {
+    @apply mt-3 mb-4 text-primary-50;
+  }
+  article a {
+    @apply text-primary-500 underline hover:text-primary-300;
+  }
+  article .astro-code {
+    @apply rounded-lg border border-secondary-700 p-2 text-xs shadow md:p-4 md:text-base;
+  }
 </style>
